# quantum-error-correcting-codes

./: .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  pyproject.toml
.github/workflows/: python-app.yml
qecc/: __init__.py  nine_qubit_shors_code.py  seven_qubit_steane_code.py  three_qubit_bit_flip.py  three_qubit_phase_flip.py
scripts/: gen_imgs.py  generate_circuits.py
src/: three_qubit_bit_flip.py
tests/: __init__.py  ruff.toml  test_nine_qubit_shors_code.py  test_seven_qubit_steane_code.py  test_three_qubit_bit_flip.py  test_three_qubit_phase_flip.py  test_utils.py  utils.py
