[project]
name = "quantum-error-correcting-codes"
version = "0.1.0"
description = "Implementing various quantum error-correcting codes in Qiskit, just for fun really"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "qiskit>=2.3.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "qiskit-aer>=0.17.2",
    "ruff>=0.14.13",
    "ty>=0.0.12",
]

[tool.ruff]
target-version = "py313"
line-length = 200

[tool.ruff.lint]
select = [
    "E",    # pycodestyle (errors)
    "F",    # pyflakes
    "B",    # flake8-bugbear
    "B9",
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "I",    # isort
    "UP",   # pyupgrade
    "PIE",  # flake8-pie
    "PGH",  # pygrep-hooks
    "PYI",  # flake8-pyi
    "RUF",  # ruff-specific rules
    "ANN",
    "W",
    "N",
    "S",
    "ARG",
    "PTH",
]

ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN201", "S101"]
